Struktur und Aufgabenstellung

--- a/einleitung.tex
+++ b/einleitung.tex
@@ -1,1 +1,7 @@
-\chapter{Einleitung}
+\chapter{Einleitung}\label{einleitung}
+
+\section{Motivation}\label{einleitung:motivation}
+
+\section{Forschungsstand}\label{einleitung:forschung}
+
+\section{Ziel der Arbeit}\label{einleitung:ziel}
