--- a/aufgabenstellung.tex
+++ b/aufgabenstellung.tex
@@ -60,22 +60,23 @@
     modernes C++11-""\-Pro\-gram\-mier\-mo\-dell für OpenCL und ist aufgrund der
     zunehmenden Plattformunterstützung eine wünschenswerte Erweiterung für
     Alpaka. SYCL-Compiler erlauben u.a. Zugriff auf NVIDIA-GPUs (experimentell)
-    und FPGAs (triSYCL).
-
+    und FPGAs (triSYCL).\\
+    \\
+    \noindent
     Ziel dieser Arbeit ist es, SYCL als Backend-Variante für Alpaka zu
     implementieren und den Einsatz gängiger SYCL-Compiler hinsichtlich CPUs,
     GPUs und FPGAs an einer realen Alpaka-Anwendung zu evaluieren.
 }{%
     \item Literaturrecherche zu SYCL/OpenCL und FPGAs.
-    \item Einarbeitung in die FPGA-Programmierung mittels des triSYCL-Compilers
-          und des Xilinx-SDAccel-Ökosystems.
+    \item Einarbeitung in die FPGA-Programmierung mittels des triSYCL-
+          und Xilinx-SDAccel-Ökosystems.
     \item Untersuchung der Performance-Analysemöglichkeiten hinsichtlich der
           Nutzbarkeit und erreichten Leistung im Vergleich zu anderen Konzepten
           und Architekturen.
-    \item Evaluierung des SYCL-Backend-Prototypen anhand eines in Alpaka
-          entwickelten Verarbeitungsalgorithmus für
-          Röntgenstrahlen-Pixeldetektordaten, u.a. hinsichtlich der erreichbaren
-          Datenraten auf sowie der Nutzbarkeit von FPGAs.
+    \item Evaluierung des SYCL-Backends anhand eines in Alpaka entwickelten
+          Verarbeitungsalgorithmus für Röntgenstrahlen-Pixeldetektordaten, u.a.
+          hinsichtlich der erreichbaren Datenraten sowie der Nutzbarkeit von
+          FPGAs.
     \item Zusammenstellung, Auswertung und Dokumentation der Ergebnisse.
 }
 \end{document}
