--- a/einleitung.tex
+++ b/einleitung.tex
@@ -2,6 +2,20 @@
 
 \section{Motivation}\label{einleitung:motivation}
 
+\gls{fpga}
+\gls{kernel}
+
 \section{Forschungsstand}\label{einleitung:forschung}
+
+\cite{howes2006} - Vergleich zwischen GPUs, FPGAs und Playstation-2-Vektoreinheit durch einheitlichen Quellcode (A Stream Compiler / ASC) \\
+\cite{gaster2013} - SYCL-Vorläufer OpenCL C++ \\
+\cite{wong2016} - Wechselwirkung zwischen SYCL und C++ (inkl. Problemen) \\
+\cite{fifield2016} - OpenCL-Optimierung auf Xilinx-FPGAs \\
+\cite{copik2017} - SYCL-Backend für HPX.Compute\\
+\cite{doumoulakis2017} - SYCL-OpenCL-Interoperabilität auf Xilinx-FPGAs \\
+\cite{krebs2019} - SYCL-Backend für RVC-CAL-Datenflussprogramme \\
+\cite{burns2019} - SYCL-DNN (plattformunabhängig) vs. cuDNN, MIOpen (plattformabhängig) \\
+\cite{sycl2019} - SYCL-Spec.\\
+\cite{rodriguez-gutiez2019} - portables BLAS
 
 \section{Ziel der Arbeit}\label{einleitung:ziel}
