--- a/bibliography.bib
+++ b/bibliography.bib
@@ -50,7 +50,7 @@
 
 @inproceedings{doumoulakis2017,
     author = {Doumoulakis, Anastasios and Keryell, Ronan and O'Brien, Kenneth},
-    title = {SYCL C++ and OpenCL interoperability experimentation with triSYCL},
+    title = {SYCL C++ and \mbox{OpenCL} interoperability experimentation with triSYCL},
     year = {2017},
     month = may,
     booktitle = {Proceedings of the \nth{5} International Workshop on OpenCL},
@@ -60,7 +60,7 @@
 
 @thesis{krebs2019,
     author = {Krebs, Florian},
-    title = {A Translation Framework from RVC-CAL Dataflow Programs to OpenCL/SYCL based Implementations},
+    title = {A Translation Framework from RVC-CAL Dataflow Programs to \mbox{OpenCL}/SYCL based Implementations},
     year = {2019},
     month = jan,
     school = {Technische Universität Kaiserslautern},
