--- a/implementierung.tex
+++ b/implementierung.tex
@@ -10,7 +10,6 @@
 \subsection{Zeiger und \textit{accessors}}
 \label{implementierung:besonderheiten:zeiger}
 
-
 \begin{itemize}
     \item Alpaka: Will überall reine Zeiger (Kernel-Code)
     \item SYCL: Will überall \texttt{accessor}, alternativ \texttt{multi\_ptr}
@@ -117,4 +116,9 @@ Anhang~\ref{anhang:github:syclspec:staticshared})
           Addressraum. Begründung SYCL-Kommittee einfügen.
 \end{itemize}
 
-\subsection{Zeiger}
+\subsection{Zufallszahlen und Zeit}
+
+\begin{itemize}
+    \item SYCLs Ökosystem ist noch nicht besonders gut ausgeprägt
+    \item es gibt noch keine Funktionen für Zufallszahlen und Zeit
+\end{itemize}
