--- a/anhang.tex
+++ b/anhang.tex
@@ -1,10 +1,27 @@
-\chapter{GitHub-Diskussionen}\label{anhang:github}
+\chapter{Fehlerberichte und Korrekturen}
+\label{anhang:fehler}
+
+\section{Fehlerberichte und Korrekturen für die Xilinx-OpenCL-Laufzeitumgebung}
+\label{anhang:fehler:xrt}
+
+\section{Fehlerberichte und Korrekturen für den Xilinx-SYCL-Compiler}
+\label{anhang:fehler:xilinx}
+
+\section{Fehlerberichte und Korrekturen für den Intel-SYCL-Compiler}
+\label{anhang:fehler:intel}
+
+\section{Fehlerberichte und Korrekturen für den ComputeCpp-SYCL-Compiler}
+\label{anhang:fehler:computecpp}
+
+\chapter{GitHub-Diskussionen}
+\label{anhang:github}
 
 \section{Diskussionen mit dem SYCL-Spezifikationskomitee}
 \label{anhang:github:syclspec}
 
 \subsection{Why is there no way to allocate local memory inside a ND-kernel
-            (parallel\_for)?}\label{anhang:github:syclspec:staticshared}
+            (parallel\_for)?}
+\label{anhang:github:syclspec:staticshared}
 
 Original: \url{https://github.com/KhronosGroup/SYCL-Docs/issues/20}, zuletzt
 abgerufen am 07. August 2019.
@@ -40,3 +57,8 @@ abgerufen am 07. August 2019.
                               running it on my laptop. I find this an amazing
                               feature of SYCL...
 \end{otherlanguage}
+
+\subsection{How to extract address space from raw pointers?}
+
+Original: \url{https://github.com/KhronosGroup/SYCL-Docs/issues/21}, zuletzt
+abgerufen am 07. August 2019.
