--- a/messung.tex
+++ b/messung.tex
@@ -6,6 +6,8 @@
 
 \subsection{Beispielalgorithmus}\label{messergebnisse:methoden:algorithmus}
 
+\cite{benner2018}
+
 \begin{equation}
     C[i] = A[i] + B[i]
 \end{equation}
